--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>Race - 1</h1>
         <canvas id="master" width="800" height="600" style="border: 5px solid chocolate;"></canvas>
         <h4>
-            <b class="text-danger">NOTE: </b> If cars is not visible, press any arrow key
+            <b class="text-danger">NOTE: </b> If cars is not visible, press any arrow key or W, A, S, D
         </h4>
     </center>
 </body>
